--- a/MP3.html
+++ b/MP3.html
@@ -292,7 +292,7 @@
     </div>
     <div>
         <div class="p">
-            <p style="background: rgba(23, 23, 79, 0.5); padding:10px; margin-left: 100px; margin-right: 100px;">The Society of Computer Engineering Students (SCPES) is a student organization for CpE students.<br><br>They plan a variety of events including Programming Demos,Seminars regarding various topics and E-Games as shown on the pictures below</p>
+            <p style=" font-weight: bold; background: rgba(23, 23, 79, 0.5); padding:10px; margin-left: 100px; margin-right: 100px;">The Society of Computer Engineering Students (SCPES) is a student organization for CpE students.<br><br>They plan a variety of events including Programming Demos,Seminars regarding various topics and E-Games as shown on the pictures below</p>
         </div>
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
             <!-- Carousel indicators -->
